--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,8 @@ context.md
 TODO.md
 roadmap.md
 
+.cursor/
+
 # PyBuilder
 .pybuilder/
 target/
@@ -210,3 +212,46 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Frontend (Node.js / React / Vite)
+# Dependencies
+node_modules/
+frontend/node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Build outputs
+frontend/dist/
+frontend/build/
+frontend/.vite/
+frontend/.next/
+frontend/out/
+
+# Environment variables
+frontend/.env
+frontend/.env.local
+frontend/.env.development.local
+frontend/.env.test.local
+frontend/.env.production.local
+
+# Editor directories and files
+frontend/.vscode/
+frontend/.idea/
+frontend/*.swp
+frontend/*.swo
+frontend/*~
+
+# OS files
+frontend/.DS_Store
+frontend/Thumbs.db
+
+# Testing
+frontend/coverage/
+frontend/.nyc_output/
+
+# TypeScript
+frontend/*.tsbuildinfo
+frontend/.tsbuildinfo
